# flake8-htk-rules

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
decisions/: 2026-04-18-initial-rule-set.md
src/flake8_htk_rules/: __init__.py  checks.py
src/flake8_htk_rules/checks/: __init__.py  datetime.py  debugger.py  naming.py  structured.py  types.py
tests/: test_flake8_integration.py  test_plugin.py
